Minor css spacing fix

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -94,7 +94,7 @@
 
 .boardGrid {
   display: grid;
-  margin-top: 50px;
+  margin-top: 30px;
   grid-template-columns: 450px 1fr;
   grid-template-rows: 450px 1fr;
   gap: 1px;
